css/outliers.goteo.css
#goteoStats {
    margin-left: auto;
    margin-right:auto;
    font-size: 12px;
    font-family: Arial, Helvetica, sans-serif;
    color: #58595b;
}
.chartsSelectors{
    background-color: #e7e7e7;
    padding-top: 10px;
    padding-bottom: 10px;
    -webkit-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.5);
    -moz-box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.5);
    box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.5);
}
.mainTitleZone {
    text-align: right;
}
.chartsContainer {
    margin-top: 30px;
}
.chartFooterZone,
.chartTitleZone,
.chartTotalZone {
    font-weight: 600;
    font-size: 20px;
}
.chartTotalZone {
    font-size: 50px;
}

/* Pie chart CSS */
.pie.label {
  font-size: 9pt;
  text-anchor: middle;
}
.pie.arc {
  stroke: #fff;
  stroke-width: 3;
}
.pie.arc.odd {
  fill: #e7e7e7;
}
.pie.arc.even {
  fill: #c7c7c7;
}
.pie.arc.maximum {
  fill: #c7ecec;
}
.pie.arc.selected {
  fill: #20b3b2;
}
.pie.pointingLine {
  stroke-width: 1px;
  stroke: #EBEBEB;
}
.pie.sublabel {
  background: none;
  text-align: center;
  font-size: 13px;
  line-height: 15px;
  fill: #58595b;
}
.pie.perclabel {
  fill: #58595b;
  background: none;
  font-weight: 600;
  text-align: center;
  font-size: 48px;
}
@media screen and (min-width: 480px) and (max-width:765px) {
  .pie.perclabel {
    font-size: 80pt;
  }
}
@media screen and (max-width:480px) {
  .pie.perclabel {
    font-size: 50pt;
  }
}

/* Bar chart CSS */
.barGraph.bar {
    fill: #e7e7e7;
    stroke: none;
}
.barGraph.bar.selected {
    fill: #20b3b2;
}
.barGraph.bar.maximum {
    fill: #c7ecec;
}
.barGraph.barLabels,
.barGraph.tooltip,
.rank.name,
.rank.value {
    font-size: 12px !important;
    opacity: 1.0;
    pointer-events: none;
}

